--- a/website/team.html
+++ b/website/team.html
@@ -79,32 +79,27 @@
 <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
 <h2>OUR TEAM</h2>
-<p>Meet the team - our office rats:</p>
+<p>Meet the group members:</p>
 
 <div class="w3-row"><br>
 
-<div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Johnny Walker</h3>
-  <p>Web Designer</p>
+<div class="w3-third">
+  <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/11889459_10205931056127755_1321200909578609780_n.jpg?_nc_cat=0&oh=a7b9d744498b7409c7bbe378220d9e9a&oe=5B7DFEF8" 
+  alt="Team mate" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>Patrick Hale</h3>
+  <p>Software Engineer</p>
 </div>
 
-<div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Rebecca Flex</h3>
-  <p>Support</p>
+<div class="w3-third">
+  <img src="/w3images/avatar.jpg" alt="Team mate" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>Marta Starr</h3>
+  <p>Software Engineer</p>
 </div>
 
-<div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Jan Ringo</h3>
-  <p>Boss man</p>
-</div>
-
-<div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Kai Ringo</h3>
-  <p>Fixer</p>
+<div class="w3-third">
+  <img src="/w3images/avatar.jpg" alt="Team mate" style="width:45%" class="w3-circle w3-hover-opacity">
+  <h3>Stephen Ballenger</h3>
+  <p>Software Engineer</p>
 </div>
 
 </div>
@@ -113,45 +108,29 @@
 <!-- Work Row -->
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
 
-<div class="w3-quarter">
+<div class="w3-third">
 <h2>Our Work</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 
-<div class="w3-quarter">
+<div class="w3-third">
 <div class="w3-card w3-white">
-  <img src="/w3images/fjords.jpg" alt="Vernazza" style="width:100%">
   <div class="w3-container">
-  <h3>Customer 1</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <h3>Phase 1</h3>
+  <h4>KWIC Software Architecture</h4>
+  <p>As system/software architects of a renowned company, your team is to architect a simple KWIC software
+    system and implement it, which later will be used for a web search engine. For this project, you will use
+    an Object-Oriented architectural style, and build a Java applet (or an equivalent), which should be
+    accessible through your team’s web page.</p>
   </div>
   </div>
 </div>
 
-<div class="w3-quarter">
+<div class="w3-third">
 <div class="w3-card w3-white">
-  <img src="/w3images/lights.jpg" alt="Cinque Terre" style="width:100%">
   <div class="w3-container">
-  <h3>Customer 2</h3>
-  <h4>Trade</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  </div>
-  </div>
-</div>
-
-<div class="w3-quarter">
-<div class="w3-card w3-white">
-  <img src="/w3images/mountains.jpg" alt="Monterosso" style="width:100%">
-  <div class="w3-container">
-  <h3>Customer 3</h3>
-  <h4>Trade</h4>
+  <h3>Phase 2</h3>
+  <h4>To Be Announced</h4>
   <p>Blablabla</p>
   <p>Blablabla</p>
   <p>Blablabla</p>
@@ -269,7 +248,7 @@
 <script>
 function myMap()
 {
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
+  myCenter=new google.maps.LatLng(32.985992, -96.750148);
   var mapOptions= {
     center:myCenter,
     zoom:12, scrollwheel: false, draggable: false,
