--- a/website/team.html
+++ b/website/team.html
@@ -97,8 +97,8 @@
 
 <div class="w3-quarter">
   <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-  <h3>Jan Ringo</h3>
-  <p>Boss man</p>
+  <h3>Stephen Ballenger</h3>
+  <p>smb160530@utdallas.edu</p>
 </div>
 
 <div class="w3-quarter">
