--- a/website/team.html
+++ b/website/team.html
@@ -239,7 +239,7 @@
       <p>Swing by for a cup of coffee, or whatever.</p>
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Richardson, US</p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  <a href="mailto: pch130030@utdallas.edu">pch130030@utdallas.edu</a></p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
+      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>smb160530@utdallas.edu</p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
     </div>
     <div class="w3-col m7">
