--- a/website/team.html
+++ b/website/team.html
@@ -240,7 +240,7 @@
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Richardson, US</p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  <a href="mailto: pch130030@utdallas.edu">pch130030@utdallas.edu</a></p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
+      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  <a href="mailto: mds161030@utdallas.edu">mds161030@utdallas.edu</a></p>
     </div>
     <div class="w3-col m7">
       <form class="w3-container w3-card-4 w3-padding-16 w3-white" action="/action_page.php" target="_blank">
