--- a/website/team.html
+++ b/website/team.html
@@ -130,11 +130,11 @@
 <div class="w3-card w3-white">
   <div class="w3-container">
   <h3>Phase 2</h3>
-  <h4>To Be Announced</h4>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
-  <p>Blablabla</p>
+  <h4>Cyberminer Software Architecture</h4>
+  <p>As system/software architects of a renowned company, your team is to architect a web search engine,
+    Cyberminer, using the simple KWIC software system which you implemented as part of Project I. For this
+    part of the project, you will use an Object-Oriented architectural style, and build a Java applet (or an
+    equivalent), which should be accessible through your team’s web page</p>
   </div>
   </div>
 </div>
