cropped stephen's photo and stored it in a local directory

--- a/website/team.html
+++ b/website/team.html
@@ -83,7 +83,7 @@
 </div>
 
 <div class="w3-third">
-  <img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/10001544_10200864985705738_1687631266_n.jpg?_nc_cat=0&oh=6381297fc93894024fa89f44ca64f0ec&oe=5B85E308" alt="Team mate" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="images/stephen.jpg" alt="Team mate" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Stephen Ballenger</h3>
   <p>Software Engineer</p>
 </div>
