--- a/website/team.html
+++ b/website/team.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Project Babel Site</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -24,7 +24,7 @@
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Logo</a>
+  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i></a>
   <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
   <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
@@ -90,7 +90,12 @@
 
 <div class="w3-third">
 <h2>Our Work</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Our team is to architect a simple KWIC software system and implement it, which later will be used for a 
+  web search engine. For this project, we will use an Object-Oriented architectural style, and build a Java
+  applet (or an equivalent), which should be accessible through our team’s web page. In addition, our team 
+  is to architect a web search engine, Cyberminer, using the simple KWIC software system which we implemented 
+  as part of Project I. For this part of the project, we will use an Object-Oriented architectural style, and
+   build a Java applet (or an equivalent), which should be accessible through our team’s web page</p>
 </div>
 
 <div class="w3-third">
@@ -98,10 +103,11 @@
   <div class="w3-container">
   <h3>Phase 1</h3>
   <h4>KWIC Software Architecture</h4>
-  <p>As system/software architects of a renowned company, your team is to architect a simple KWIC software
-    system and implement it, which later will be used for a web search engine. For this project, you will use
-    an Object-Oriented architectural style, and build a Java applet (or an equivalent), which should be
-    accessible through your team’s web page.</p>
+  <p><a href="http://www.utdallas.edu/~chung/CS4352/Project1.pdf" class="w3-bar-item w3-button">Outline PDF</a></p>
+  <p>The KWIC (Key Word in Context) index system shall accept an ordered set of lines, where each line is an
+      ordered set of words, and each word is an ordered set of characters. Any line shall be ``circularly shifted"
+      by repeatedly removing the first word and appending it at the end of the line. The KWIC index system
+      shall output a listing of all circular shifts of all lines in ascending alphabetical order.</p>
   </div>
   </div>
 </div>
@@ -111,10 +117,11 @@
   <div class="w3-container">
   <h3>Phase 2</h3>
   <h4>Cyberminer Software Architecture</h4>
-  <p>As system/software architects of a renowned company, your team is to architect a web search engine,
-    Cyberminer, using the simple KWIC software system which you implemented as part of Project I. For this
-    part of the project, you will use an Object-Oriented architectural style, and build a Java applet (or an
-    equivalent), which should be accessible through your team’s web page</p>
+  <p><a href="http://www.utdallas.edu/~chung/CS4352/Project2.pdf" class="w3-bar-item w3-button">Outline PDF</a></p>
+  <p>Cyberminer shall accept a list of keywords and return a list of URLs whose descriptions contain any of the
+      given keywords.
+      Cyberminer shall use another software system, the KWIC system, as a component, in order to efficiently
+      maintain a database of URLs and the corresponding descriptions.</p>
   </div>
   </div>
 </div>
@@ -197,7 +204,7 @@
       <p>Project from The University of Texas at Dallas.</p>
       <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Richardson, US</p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  <a href="mailto: pch130030@utdallas.edu">pch130030@utdallas.edu</a></p>
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  <a href="mailto: mds161030@utdallas.edu">mds161030@utdallas.edu</a></p>
+      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  <a href="mailto: mds161030@utdallas.edu">mds161030@utdallas.edu</a></p>
       <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  <a href="mailto: smb160530@utdallas.edu">smb160530@utdallas.edu</a></p>
     </div>
   </div>
