--- a/website/team.html
+++ b/website/team.html
@@ -52,7 +52,7 @@
     <span class="w3-jumbo w3-hide-small">Project Babel</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Project Babel</span><br>
     <span class="w3-large">a simple KWIC software system</span>
-    <p><a href="#work" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
+    <p><a href="#work" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more</a></p>
   </div> 
 </header>
 
