added link to spmp in 'links' dropdown as well as in the phase 1 description

--- a/website/team.html
+++ b/website/team.html
@@ -32,6 +32,7 @@
     <button class="w3-button" title="Notifications">Links <i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
       <a href="https://github.com/pecon94/Project_Babel_SE4352" class="w3-bar-item w3-button">Github</a>
+      <a href="https://drive.google.com/file/d/15y_9JaO8OoN2iP2mOBgvaFRN24R-_IoB/view?usp=sharing" class="w3-bar-item w3-button">SPMP</a>
     </div>
   </div>
  </div>
@@ -104,6 +105,7 @@
   <h3>Phase 1</h3>
   <h4>KWIC Software Architecture</h4>
   <p><a href="http://www.utdallas.edu/~chung/CS4352/Project1.pdf" class="w3-bar-item w3-button">Outline PDF</a></p>
+  <p><a href="https://drive.google.com/file/d/15y_9JaO8OoN2iP2mOBgvaFRN24R-_IoB/view?usp=sharing" class="w3-bar-item w3-button">SPMP (Version 1)</a></p>
   <p>The KWIC (Key Word in Context) index system shall accept an ordered set of lines, where each line is an
       ordered set of words, and each word is an ordered set of characters. Any line shall be ``circularly shifted"
       by repeatedly removing the first word and appending it at the end of the line. The KWIC index system
