work towards final script with object oriented architecture

--- a/website/idea1.html
+++ b/website/idea1.html
@@ -10,7 +10,7 @@
             <form name="input">
                 <textarea rows="10" cols="100" autofocus required wrap="hard" name="inputBox"></textarea>
                 <br><br>
-                <input type="button" value="Submit" onclick="getInput()">
+                <input type="button" value="Submit" onclick="Main()">
             
             </form>
         </div>
