working kwic script.. still needs some work but it's functional

--- a/website/kwic.html
+++ b/website/kwic.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <script type="text/javascript" src="idea1script.js"></script>
+        <script type="text/javascript" src="kwic.js"></script>
     </head>
     
     <body>
         <div style="text-align:center; border:1px solid">
             <h1>KEYWORD IN CONTEXT</h1>
-            <p>Welcome to the application...</p>
+            <p>Welcome to the application...enter lines of text separated by newline (return)</p>
             <form name="input">
                 <textarea rows="10" cols="100" autofocus required wrap="hard" name="inputBox"></textarea>
                 <br><br>
