--- a/website/team.html
+++ b/website/team.html
@@ -33,7 +33,7 @@
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
       <a href="https://github.com/pecon94/Project_Babel_SE4352" class="w3-bar-item w3-button">Github</a>
       <a href="https://drive.google.com/file/d/15y_9JaO8OoN2iP2mOBgvaFRN24R-_IoB/view?usp=sharing" class="w3-bar-item w3-button">SPMP</a>
-      <a href="idea1.html" class="w3-bar-item w3-button">Idea 1</a>
+      <a href="kwic.html" class="w3-bar-item w3-button">KWIC</a>
     </div>
   </div>
  </div>
