added print functions for each step

--- a/website/kwic.html
+++ b/website/kwic.html
@@ -15,6 +15,8 @@
             </form>
         </div>
         <br>
+        <div id="linestorage" style="text-align:center; border:1px solid"></div>
+        <div id="circularshifts" style="text-align:center; border:1px solid"></div>
         <div id="output" style="text-align:center; border:1px solid"></div>
         
     </body>
